--- a/gallery/src/main/res/values/strings.xml
+++ b/gallery/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="open_camera">Open camera</string>
 
     <string name="hidden">(hidden)</string>
+    <string name="title_activity_sample">SampleActivity</string>
 </resources>
